# FastApi

./: .env.example  .gitignore  README.md  docker-compose.yaml
src/: .flake8  Dockerfile  alembic.ini  pyproject.toml
src/backend/: asgi.py  config.py  main.py
src/backend/api_wrappers/: __init__.py  base.py  drf_project_backend.py
src/backend/authentication/: __init__.py  password.py  token.py
src/backend/db/: database.py  models.py
src/backend/db/schemas/: banner.py  base.py  profile.py  token.py
src/backend/filters/: banner.py  base.py
src/backend/redis/: client.py  key_patterns.py
src/backend/services/: __init__.py  banner.py  base.py  profile.py
src/backend/views/: authentication.py  banner.py  profile.py  router.py
src/migrations/: env.py
src/migrations/versions/profile/: 00__initial.py  00_initial.py  01_add_profile.py  02_added_locale.py
src/tests/: base.py  conftest.py
src/tests/api/: test_get_banners.py  test_get_token.py  test_register_user.py
src/tests/api/authentication/: test_refresh_token.py
src/tests/api/profile/: test_edit_personal_data.py  test_get_personal_data.py  test_remove_profile.py
src/tests/api_wrappers/: test_base.py
src/tests/authentication/: test_check_token.py  test_generate_token.py
src/tests/factories/: __init__.py  banner.py  profile.py
src/tests/services/: test_authenticate_user.py  test_get_banners.py  test_register_user.py
