[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["borsh130894 <borsh130894@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.37"
sqlalchemy-utils = "^0.41.2"
pydantic-settings = "^2.7.1"
alembic = "^1.14.1"
asyncpg = "^0.30.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pydantic = {extras = ["email"], version = "^2.10.6"}
pyjwt = "^2.10.1"
requests = "^2.32.3"

[tool.poetry.plugins."backend.modules"]
api = "backend.views.router"


[tool.poetry.group.dev.dependencies]
responses = "^0.25.6"
pytest = "^8.3.4"
freezegun = "^1.5.1"
pytest-asyncio = "0.21.2"
factory-boy = "^3.3.3"
async-factory-boy = "^1.0.1"
async-asgi-testclient = "^1.4.11"
httpx = "0.24.1"
flake8 = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
